--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ cffi==1.14.6
 charset-normalizer==2.0.6
 cryptography==3.4.8
 defusedxml==0.7.1
+dj-rest-auth==2.1.11
 Django==3.2.7
 django-allauth==0.45.0
-django-rest-auth==0.9.5
 djangorestframework==3.12.4
 idna==3.2
 oauthlib==3.1.1
