--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "git.ignoreLimitWarning": true,
     "python.linting.pylintEnabled": true,
-    "python.linting.pep8Enabled": true,
+    "python.linting.pycodestyleEnabled": false,
     "launch": {
         "configurations": [],
         "compounds": []
@@ -12,5 +12,6 @@
             "!Module"
         ],
         "editor.wordBasedSuggestions": false
-    }
+    },
+    "python.linting.enabled": true
 }
