--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "git.ignoreLimitWarning": true,
     "python.linting.pylintEnabled": true,
-    "python.linting.pycodestyleEnabled": false,
+    "python.linting.pycodestyleEnabled": true,
     "launch": {
         "configurations": [],
         "compounds": []
