--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,16 @@ services:
     depends_on:
       - migration
   migration:
+    build: .
+    image: meeting_room
     command: python manage.py migrate authentication
     volumes:
       - ./meeting_room:/meeting_room
     depends_on:
       - migration2
   migration2:
+    build: .
+    image: meeting_room
     command: python manage.py migrate
     volumes:
       - ./meeting_room:/meeting_room
